# brick_road

./: .gitignore  CLAUDE.md  Cargo.toml  FEATURES.md  README.md  config.json  release.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
assets/: icon.icns
docs/: branch-semantics.md
scripts/: check-schema-guard.sh
spike/: Cargo.toml
spike/src/: main.rs
src/: analysis.rs  bands.rs  blocks.rs  calendar.rs  camera.rs  constants.rs  csv_export.rs  datepicker.rs  db.rs  document.rs  flow.rs  graph.rs  gutter.rs  labels.rs  main.rs  model.rs  schedule.rs  settings_ui.rs  testkit.rs  theme.rs
