[package]
name = "brick_road"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.18.0"
bevy_egui = "0.39.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
